--- a/faux_macros/Cargo.toml
+++ b/faux_macros/Cargo.toml
@@ -5,9 +5,10 @@ authors = ["Andres <andresnrx@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-syn = { version = "1.0.5", features = ["full", "extra-traits"] }
+syn = { version = "1.0.11", features = ["full", "extra-traits"] }
 quote = "1.0.2"
-proc-macro2 = "1.0.1"
+proc-macro2 = "1.0.6"
+proc-macro-hack = "0.5.11"
 
 [dev-dependencies]
 faux = { path = "../"}
