Make the mock store be Sync/Send
This is currently unideal as every user has to pay the cost of this.
I hope a new solution presents itself soon

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ readme = "README.md"
 doctest = false
 
 [dependencies]
-faux_macros = "0.0.1"
+# faux_macros = "0.0.1"
+faux_macros = { path = "faux_macros" }
 proc-macro-hack = "0.5"
 
 [workspace]
