--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ readme = "README.md"
 doctest = false
 
 [dependencies]
-# faux_macros = "0.0.1"
 faux_macros = { path = "faux_macros", version = "0.0.2" }
 proc-macro-hack = "0.5"
+
+[dev-dependencies]
+futures = "0.3.1"
 
 [workspace]
 members = ["faux_macros"]
