allow mocked structs to auto-derive Clone

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
       with:
         profile: minimal
         toolchain: nightly
+        override: true
     - name: Build
       run: cargo build --verbose
     - name: Tests
