--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ doctest = false
 
 [dependencies]
 faux_macros = { path = "faux_macros", version = "0.0.8" }
+paste = "1.0.4"
 
 [dev-dependencies]
 futures = "0.3.9"
