--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
     - name: doc tests
       run: cargo +nightly test --doc --verbose
     - name: test --release
-      run: cargo test --release
+      run: cargo test --release --verbose
