--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rust-version = "1.56"
 [dependencies]
 faux_macros = { path = "faux_macros", version = "0.1.6" }
 paste = "1.0.4"
+parking_lot = "0.11.2"
 
 [dev-dependencies]
 futures = "0.3.9"
