--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/nrxus/faux"
 edition = "2018"
 keywords = ["mock", "mocking", "test", "testing", "faux"]
 readme = "README.md"
+rust-version = "1.56"
 
 [dependencies]
 faux_macros = { path = "faux_macros", version = "0.1.7" }
